feat: EDA and imoputation

--- a/implementation/01_data_integration.ipynb
+++ b/implementation/01_data_integration.ipynb
@@ -4396,7 +4396,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_45801/1493798632.py:70: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_49524/2466023780.py:69: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  btc_data_df = pd.read_sql_query(query, conn)\n"
      ]
     },
@@ -4672,7 +4672,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_45801/2175759991.py:54: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_49524/3410262971.py:53: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql_query(query, conn)\n"
      ]
     }
@@ -4881,9 +4881,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_45801/3256168890.py:20: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_49524/3256168890.py:20: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df_fear_and_greed_index = pd.read_sql(fear_and_greed_index_query, conn)\n",
-      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_45801/3256168890.py:21: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_49524/3256168890.py:21: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df_news_btc = pd.read_sql(news_btc_query, conn)\n"
      ]
     }
@@ -4920,6 +4920,43 @@
     "\n",
     "print(\"\\nNews BTC DataFrame:\")\n",
     "print(df_news_btc.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0d9fc1e7-dcae-459f-835e-7359f6fe5768",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of articles per month:\n",
+      "year_month\n",
+      "2022-12    733\n",
+      "2023-12    700\n",
+      "Freq: M, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming df_news_btc is already loaded as per your script\n",
+    "\n",
+    "# Convert 'timestamp' column to datetime\n",
+    "df_news_btc['timestamp'] = pd.to_datetime(df_news_btc['timestamp'])\n",
+    "\n",
+    "# Extract year and month into a new column\n",
+    "df_news_btc['year_month'] = df_news_btc['timestamp'].dt.to_period('M')\n",
+    "\n",
+    "# Count the number of articles per month\n",
+    "articles_per_month = df_news_btc.groupby('year_month').size()\n",
+    "\n",
+    "# Print the result\n",
+    "print(\"Number of articles per month:\")\n",
+    "print(articles_per_month)\n"
    ]
   },
   {
@@ -4982,9 +5019,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_45801/2333924476.py:18: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_49524/2333924476.py:18: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  final_df['value'] = final_df['value'].fillna(method='ffill')\n",
-      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_45801/2333924476.py:19: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_49524/2333924476.py:19: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  final_df['classification'] = final_df['classification'].fillna(method='ffill')\n"
      ]
     }
@@ -5063,9 +5100,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_45801/3464786639.py:12: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_49524/740921917.py:12: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
       "  final_df['merge_key'] = final_df['timestamp'].dt.floor('H')\n",
-      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_45801/3464786639.py:13: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+      "/var/folders/jt/f0dtwp_x2w1fvk06tzwm2p200000gn/T/ipykernel_49524/740921917.py:13: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
       "  df_news_btc['merge_key'] = df_news_btc['timestamp_rounded'].dt.floor('H')\n"
      ]
     }
@@ -5104,7 +5141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e393c1ba-9809-4a16-8a75-cbdc3ee52213",
    "metadata": {},
    "outputs": [],
@@ -5114,7 +5151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "85c964ff-9091-46ae-a682-fb30da3a48b9",
    "metadata": {},
    "outputs": [
