chore: doc cleaning

--- a/implementation/02_data_inspection.ipynb
+++ b/implementation/02_data_inspection.ipynb
@@ -274,11 +274,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab748a6c-5a87-4c83-95ab-b333328ada51",
+   "cell_type": "markdown",
+   "id": "7d1d7703-5160-4e3c-a5f0-9e1cdcb2c7a7",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Helper Functions"
    ]
@@ -497,8 +495,6 @@
     }
    ],
    "source": [
-    "# Assuming df is our loaded DataFrame and the functions are already defined\n",
-    "\n",
     "# Call the functions on your dataset\n",
     "first_measurement_times = first_measurement_time(df)\n",
     "average_intervals = average_interval_between_measurements(df)\n",
@@ -578,10 +574,15 @@
     "    \n",
     "    return filled_df\n",
     "\n",
-    "filled_df = forward_fill_from_first_measurement(df)\n",
-    "\n",
-    "# This filled_df now has missing values forward filled starting from the first\n",
-    "# non-null value for each column"
+    "filled_df = forward_fill_from_first_measurement(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c4d481e-bc9e-45dd-935a-b330f1efcdd9",
+   "metadata": {},
+   "source": [
+    "# Count missing values for every column"
    ]
   },
   {
@@ -657,7 +658,6 @@
     }
    ],
    "source": [
-    "# Count missing values for every column\n",
     "missing_values_after_fill = filled_df.isnull().sum()\n",
     "\n",
     "# Display the count of missing values for each column\n",
@@ -937,11 +937,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "7f02a31f-fc26-4090-a528-6a705af842b5",
+   "cell_type": "markdown",
+   "id": "eef8ed8f-50ce-449d-87e9-d81b91ef1ba3",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Final validation checks"
    ]
@@ -1182,13 +1180,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "53767660-a2cf-4273-af92-bb4a3a000068",
+   "cell_type": "markdown",
+   "id": "a0bf73a8-3450-4bfb-a35a-1a03787641ba",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# We keep 2 datasets, as news was grouped per hour. The identical values mean different articles were published in the same hour."
+    "### We keep 2 datasets, as news was grouped per hour. The identical values mean different articles were published in the same hour."
    ]
   },
   {
@@ -1212,13 +1208,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "937ea9a1-696d-4e9c-984c-b491b92fc9e0",
+   "cell_type": "markdown",
+   "id": "f1e2ff1e-4be4-4186-88c9-4a1fca9438ef",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Verifification"
+    "# Verification"
    ]
   },
   {
@@ -1242,14 +1236,6 @@
     "# Print the result to confirm if duplicates exist\n",
     "print(f\"Number of duplicate timestamps in the no duplicates DataFrame: {duplicate_timestamps_check}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "891795ae-726a-4e26-9b19-87bff37904fc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
