--- a/implementation/04_PCA_&_Transform_To_Modelling_Format.ipynb
+++ b/implementation/04_PCA_&_Transform_To_Modelling_Format.ipynb
@@ -409,9 +409,7 @@
     "\n",
     "# Print the explained variance ratio\n",
     "print(\"Explained variance ratio:\")\n",
-    "print(pca.explained_variance_ratio_)\n",
-    "\n",
-    "# 'principalDf' now contains your PCA-transformed features\n"
+    "print(pca.explained_variance_ratio_)"
    ]
   },
   {
@@ -855,7 +853,7 @@
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Assuming 'principalDf' is your DataFrame containing the PCA components\n",
+    "# Assuming 'principalDf' is our DataFrame containing the PCA components\n",
     "fig = plt.figure(figsize=(10, 8))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "\n",
@@ -903,7 +901,7 @@
     "else:\n",
     "    print(\"Timestamp column not found. Please check the DataFrame.\")\n",
     "\n",
-    "# Drop the original 'timestamp' column (and any others you've decided to exclude)\n",
+    "# Drop the original 'timestamp' column (and others we've decided to exclude)\n",
     "df = df.drop(['timestamp', 'high', 'low'], axis=1, errors='ignore')  # Use errors='ignore' to avoid issues if columns don't exist\n",
     "\n",
     "# Define 'X' and 'y'\n",
