--- a/implementation/05_Feature_analysis.ipynb
+++ b/implementation/05_Feature_analysis.ipynb
@@ -24,11 +24,11 @@
     "y_train_df = pd.read_csv(y_train_path)\n",
     "y_test_df = pd.read_csv(y_test_path)\n",
     "\n",
-    "# Convert to Series if they are single-column DataFrames\n",
+    "# Convert to Series\n",
     "y_train = y_train_df.iloc[:, 0] if y_train_df.shape[1] == 1 else y_train_df\n",
     "y_test = y_test_df.iloc[:, 0] if y_test_df.shape[1] == 1 else y_test_df\n",
     "\n",
-    "# Assuming you want to scale your data using MinMaxScaler\n",
+    "# we want to use MinMaxScaler\n",
     "scaler = MinMaxScaler()\n",
     "\n",
     "# Scale 'X' features\n",
