--- a/implementation/01_data_integration.ipynb
+++ b/implementation/01_data_integration.ipynb
@@ -1,13 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "f61c7858-ab64-4289-9d54-91513e441153",
+   "cell_type": "markdown",
+   "id": "5eb65ad7-f396-4f55-abce-e6beaa7678eb",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# environment check\n"
+    "# environment check"
    ]
   },
   {
@@ -68,11 +66,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "71177a65-b745-4733-a88c-e52ae69b0c88",
+   "cell_type": "markdown",
+   "id": "dc97b5dc-8beb-439f-a8b9-a242ffd0cebe",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Get DB connection"
    ]
@@ -115,11 +111,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "80eea2f5-b204-4935-997a-a8407ec378ad",
+   "cell_type": "markdown",
+   "id": "abb37851-709b-4151-8a2a-598868e14d1f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Explore DB"
    ]
@@ -4527,11 +4521,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "25fe36ef-9c7d-41ba-be9d-760d8a93ad83",
+   "cell_type": "markdown",
+   "id": "75cd9c86-1c24-4050-974d-fcea92a15ac4",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Inspect world data tables"
    ]
@@ -4740,13 +4732,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "09c5b6dd-b031-4de5-a40b-c831c5aa85c6",
+   "cell_type": "markdown",
+   "id": "1c4c5851-652c-4a4d-94c5-7e026149c339",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Join worldbank data using Pandas"
+    "## Join worldbank data using Pandas"
    ]
   },
   {
@@ -4825,9 +4815,6 @@
     "\n",
     "# Perform the left join\n",
     "merged_df = pd.merge(btc_data_df, df, on='timestamp', how='left')\n",
-    "\n",
-    "# Optionally handle missing values, e.g., fill with zeros or forward fill\n",
-    "# merged_df.fillna(0, inplace=True)  # Example to fill missing values with zeros\n",
     "\n",
     "# Display the first few rows of the merged DataFrame\n",
     "print(merged_df.head())\n",
@@ -4943,8 +4930,6 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Assuming df_news_btc is already loaded as per your script\n",
-    "\n",
     "# Convert 'timestamp' column to datetime\n",
     "df_news_btc['timestamp'] = pd.to_datetime(df_news_btc['timestamp'])\n",
     "\n",
@@ -5043,7 +5028,7 @@
     "# Now, you can drop the additional date column if it's no longer needed\n",
     "final_df.drop('date', axis=1, inplace=True)\n",
     "\n",
-    "# If you wish to forward fill missing values for the fear and greed index data throughout each day, you can do so like this:\n",
+    "# we wish to forward fill missing values for the fear and greed index data throughout each day, like this:\n",
     "final_df['value'] = final_df['value'].fillna(method='ffill')\n",
     "final_df['classification'] = final_df['classification'].fillna(method='ffill')\n",
     "\n",
@@ -5140,11 +5125,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "e393c1ba-9809-4a16-8a75-cbdc3ee52213",
+   "cell_type": "markdown",
+   "id": "c86fb752-89cb-491a-9b67-ebfa6f0013cc",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Save file for further processingg"
    ]
@@ -5178,14 +5161,6 @@
     "\n",
     "print(f'Data saved to {csv_file_path}')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bda6abcb-0268-4dbd-beb5-b41934504270",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
