--- a/implementation/03_exploratory_data_analysis.ipynb
+++ b/implementation/03_exploratory_data_analysis.ipynb
@@ -63,16 +63,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5733b104-ddff-4066-887a-ae6f1de8f4f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check missing values again"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "id": "80acef31-4e2d-426a-9e42-493ff354a9e5",
    "metadata": {},
@@ -206,9 +196,6 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Assuming you have loaded your DataFrame as 'df'\n",
-    "# If you haven't loaded it, you should load it from your CSV file or other data source here\n",
-    "\n",
     "# Checking for missing values per column\n",
     "missing_values = df.isnull().sum()\n",
     "\n",
@@ -285,24 +272,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "ba9080c4-81cd-4f44-b4e2-667a1e7bd54c",
+   "cell_type": "markdown",
+   "id": "9d2bf79f-60c5-44b2-a66a-af89d7a143ed",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Visualizations"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "c7efb97a-3f6d-4883-9314-88a7b9df63e1",
+   "cell_type": "markdown",
+   "id": "c60e371b-7a00-4670-9350-9ab4f1e71011",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Distribution of Key Financial Metrics\n",
-    "# We'll start by plotting the distributions of 'low', 'high', 'open', 'close', and 'volume' to understand the data's spread."
+    "Distribution of Key Financial Metrics\n",
+    "We'll start by plotting the distributions of \n",
+    "'low', 'high', 'open', 'close', and 'volume' to understand the data's spread."
    ]
   },
   {
@@ -420,14 +404,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "2adfd488-bc2c-411c-94e1-51b3647b3a5c",
+   "cell_type": "markdown",
+   "id": "5e253108-b90c-4561-ba0c-adcfac59e090",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Correlation Heatmap\n",
-    "# A heatmap can visually represent the correlation between different features in your dataset."
+    "## A heatmap can visually represent the correlation between different features in our dataset."
    ]
   },
   {
@@ -499,14 +481,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aefdecde-5187-4321-ade9-a97981a0de12",
+   "cell_type": "markdown",
+   "id": "113b6187-e26d-4a69-b434-02304226a116",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Sentiment Score Analysis\n",
-    "# Finally, let's explore the sentiment score distribution and its impact over time."
+    "## Finally, let's explore the sentiment score distribution and its impact over time."
    ]
   },
   {
@@ -525,7 +505,6 @@
     "plt.show()\n",
     "\n",
     "# Sentiment score over time (assuming sentiment_score is tied to specific dates)\n",
-    "# Make sure to handle NaN values appropriately, e.g., by filtering or imputation\n",
     "df['timestamp_news'] = pd.to_datetime(df['timestamp_news'])\n",
     "plt.figure(figsize=(14, 7))\n",
     "sns.scatterplot(x='timestamp_news', y='sentiment_score', data=df)\n",
@@ -565,11 +544,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab3e5322-907d-46eb-a559-a58beee57e34",
+   "cell_type": "markdown",
+   "id": "3b1d999d-ae05-4fbe-b196-5f730ef38768",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Fear and Greed"
    ]
@@ -615,11 +592,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ef6f7d6-ccce-4034-a6f7-d69c4291ae41",
+   "cell_type": "markdown",
+   "id": "51839ddb-f3fc-4052-9834-83c63f0eb109",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Fear and greed (colorized)"
    ]
