--- a/implementation/06_RNN_model_BTC.ipynb
+++ b/implementation/06_RNN_model_BTC.ipynb
@@ -681,87 +681,11 @@
     "plt.tight_layout()  # Adjust layout to make room for the rotated date labels\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "93351f21-b758-4127-9070-e70777e47c8f",
-   "metadata": {},
-   "source": [
-    "# Hyper Parameter Tuning using RandomizedSearchCV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "b9cc5b16-661a-485a-9a07-548f93818b23",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow.keras.wrappers'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[30], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwrappers\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mscikit_learn\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m KerasRegressor\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RandomizedSearchCV\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlayers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LSTM, Dense\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow.keras.wrappers'"
-     ]
-    }
-   ],
-   "source": [
-    "from tensorflow.keras.wrappers.scikit_learn import KerasRegressor\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
-    "from tensorflow.keras.layers import LSTM, Dense\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "\n",
-    "def create_model(n_units=100, activation='relu', optimizer='adam', learning_rate=0.001):\n",
-    "    # Initialize the optimizer with the specified learning rate\n",
-    "    if optimizer == 'adam':\n",
-    "        opt = Adam(learning_rate=learning_rate)\n",
-    "    \n",
-    "    model = Sequential([\n",
-    "        LSTM(units=n_units, activation=activation, input_shape=(n_input, n_features)),\n",
-    "        Dense(1)\n",
-    "    ])\n",
-    "    model.compile(optimizer=opt, loss='mse')\n",
-    "    return model\n",
-    "\n",
-    "model = KerasRegressor(build_fn=create_model, epochs=10, verbose=0)\n",
-    "\n",
-    "param_dist = {\n",
-    "    'n_units': [50, 100, 150],\n",
-    "    'activation': ['relu', 'tanh'],\n",
-    "    'optimizer': ['adam'],\n",
-    "    'learning_rate': [0.001, 0.01, 0.0001],\n",
-    "    'batch_size': [64, 128],  # Assuming your create_model function can accept this\n",
-    "    'epochs': [10, 20]  # Assuming your create_model function can accept this\n",
-    "}\n",
-    "\n",
-    "random_search = RandomizedSearchCV(estimator=model, param_distributions=param_dist, n_iter=10, n_jobs=-1, cv=3)\n",
-    "\n",
-    "# Fit the random search model\n",
-    "random_search_result = random_search.fit(X_train_scaled, y_train_scaled)\n",
-    "\n",
-    "print(\"Best: %f using %s\" % (random_search_result.best_score_, random_search_result.best_params_))\n",
-    "best_model = random_search_result.best_estimator_.model\n",
-    "\n",
-    "# You can further evaluate the best_model as needed, or use it for predictions.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abe25224-514d-4562-938f-c1014e4280d9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python (.venv)",
    "language": "python",
    "name": ".venv"
   },
