feat: fuzzy models via TensorFlow

--- a/implementation/07_HyperParameterTuning_LSTM_RNN.ipynb
+++ b/implementation/07_HyperParameterTuning_LSTM_RNN.ipynb
@@ -64,9 +64,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3696f698-79ae-4842-ae26-acb928d93a74",
+   "metadata": {},
+   "source": [
+    "## Random Search"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "aa19a2a7-1cbe-445c-90a5-731f68095106",
+   "execution_count": null,
+   "id": "2be48824-1f75-4a05-b386-3f70d66a5185",
    "metadata": {},
    "outputs": [
     {
@@ -74,143 +82,152 @@
      "output_type": "stream",
      "text": [
       "/Users/nikhilrazab-sekh/Desktop/simpful_btc/implementation/.venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
+      "  warnings.warn(\n",
+      "[I 2024-03-18 22:59:25,536] A new study created in memory with name: no-name-caaa2c31-beeb-4d87-a13e-15a8dae8c805\n"
      ]
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import LSTM, Dense\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from keras_tuner import RandomSearch\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3696f698-79ae-4842-ae26-acb928d93a74",
-   "metadata": {},
-   "source": [
-    "## Get time for one Epoch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "64f741a3-0c4c-4d45-b8bc-84197f698457",
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "ename": "IndexError",
-     "evalue": "tuple index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moptimizers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Adam\n\u001b[1;32m      7\u001b[0m n_input \u001b[38;5;241m=\u001b[39m X_train_scaled\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]  \u001b[38;5;66;03m# Assuming X_train_scaled is a 3D array of shape (samples, time_steps, features)\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m n_features \u001b[38;5;241m=\u001b[39m \u001b[43mX_train_scaled\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Define the model with a typical configuration\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcreate_test_model\u001b[39m():\n",
-      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6c9fdbba806d4051921de318449e6cd1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nikhilrazab-sekh/Desktop/simpful_btc/implementation/.venv/lib/python3.9/site-packages/keras/src/layers/rnn/rnn.py:205: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(**kwargs)\n",
+      "/Users/nikhilrazab-sekh/Desktop/simpful_btc/implementation/.venv/lib/python3.9/site-packages/keras/src/trainers/data_adapters/py_dataset_adapter.py:122: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
+      "  self._warn_if_super_not_called()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[I 2024-03-18 23:04:50,981] Trial 0 finished with value: 0.008750918321311474 and parameters: {'units': 50, 'activation': 'relu', 'learning_rate': 0.00018385008016090357, 'batch_size': 32}. Best is trial 0 with value: 0.008750918321311474.\n",
+      "[I 2024-03-18 23:09:06,439] Trial 1 finished with value: 0.00778465811163187 and parameters: {'units': 50, 'activation': 'relu', 'learning_rate': 0.0024869512390378475, 'batch_size': 64}. Best is trial 1 with value: 0.00778465811163187.\n",
+      "[I 2024-03-18 23:13:25,929] Trial 2 finished with value: 0.0033894293010234833 and parameters: {'units': 50, 'activation': 'relu', 'learning_rate': 0.0036323905906861884, 'batch_size': 64}. Best is trial 2 with value: 0.0033894293010234833.\n",
+      "[I 2024-03-18 23:28:11,075] Trial 3 finished with value: 0.005231366027146578 and parameters: {'units': 150, 'activation': 'tanh', 'learning_rate': 0.002739119041734605, 'batch_size': 32}. Best is trial 2 with value: 0.0033894293010234833.\n"
      ]
     }
    ],
    "source": [
-    "import time\n",
-    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import optuna\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import LSTM, Dense\n",
     "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.preprocessing.sequence import TimeseriesGenerator\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "n_input = X_train_scaled.shape[1]  # Assuming X_train_scaled is a 3D array of shape (samples, time_steps, features)\n",
-    "n_features = X_train_scaled.shape[2]\n",
+    "# Assuming the following variables are defined and properly prepared:\n",
+    "# X_train_scaled, y_train_scaled, X_test_scaled, y_test_scaled, scaler_y\n",
     "\n",
+    "n_input = 168  # Number of time steps to look back for predictions\n",
+    "n_features = X_train_scaled.shape[1]  # Number of features in the dataset\n",
     "\n",
-    "# Define the model with a typical configuration\n",
-    "def create_test_model():\n",
-    "    model = Sequential()\n",
-    "    model.add(LSTM(units=100, activation='relu', input_shape=(n_input, n_features)))\n",
-    "    model.add(Dense(1))\n",
-    "    model.compile(optimizer=Adam(learning_rate=0.001), loss='mse')\n",
-    "    return model\n",
+    "def objective(trial):\n",
+    "    # Hyperparameters to be tuned\n",
+    "    units = trial.suggest_categorical('units', [50, 100, 150])\n",
+    "    activation = trial.suggest_categorical('activation', ['relu', 'tanh'])\n",
+    "    learning_rate = trial.suggest_float('learning_rate', 1e-4, 1e-2, log=True)\n",
+    "    batch_size = trial.suggest_categorical('batch_size', [32, 64, 128])\n",
+    "    \n",
+    "    # Model definition\n",
+    "    model = Sequential([\n",
+    "        LSTM(units=units, activation=activation, input_shape=(n_input, n_features)),\n",
+    "        Dense(1)\n",
+    "    ])\n",
+    "    model.compile(optimizer=Adam(learning_rate=learning_rate), loss='mse')\n",
+    "    \n",
+    "    # Fit model using TimeseriesGenerator\n",
+    "    train_generator = TimeseriesGenerator(X_train_scaled, y_train_scaled, length=n_input, batch_size=batch_size)\n",
+    "    validation_generator = TimeseriesGenerator(X_test_scaled, y_test_scaled, length=n_input, batch_size=batch_size)\n",
+    "    model.fit(train_generator, epochs=10, validation_data=validation_generator, verbose=0)\n",
+    "    \n",
+    "    # Evaluate the model\n",
+    "    val_loss = model.evaluate(validation_generator, verbose=0)\n",
+    "    return val_loss\n",
     "\n",
-    "model = create_test_model()\n",
+    "# Optimize\n",
+    "study = optuna.create_study(direction='minimize')\n",
+    "study.optimize(objective, n_trials=10, show_progress_bar=True)\n",
     "\n",
-    "# Measure the time for a few epochs\n",
-    "start_time = time.time()\n",
+    "# After optimization, print best parameters\n",
+    "best_params = study.best_trial.params\n",
+    "print(f\"Best parameters: {best_params}\")\n",
     "\n",
-    "model.fit(\n",
-    "    X_train_scaled, y_train_scaled,\n",
-    "    epochs=2,  # Small number of epochs\n",
-    "    validation_data=(X_test_scaled, y_test_scaled),\n",
-    "    verbose=1\n",
-    ")\n",
+    "# Correct approach to use the best parameters to create a new model\n",
+    "model = Sequential([\n",
+    "    LSTM(units=best_params['units'], activation=best_params['activation'], input_shape=(n_input, n_features)),\n",
+    "    Dense(1)\n",
+    "])\n",
+    "model.compile(optimizer=Adam(learning_rate=best_params['learning_rate']), loss='mse')\n",
     "\n",
-    "elapsed_time = time.time() - start_time\n",
-    "time_per_epoch = elapsed_time / 2  # Since we're running for 2 epochs\n",
+    "# It's suggested to retrain your model here with the entire dataset or a combined train-validation set if applicable\n",
+    "# Adjust batch_size based on best_params if it was part of the optimization\n",
+    "train_generator = TimeseriesGenerator(X_train_scaled, y_train_scaled, length=n_input, batch_size=best_params['batch_size'])\n",
+    "model.fit(train_generator, epochs=10, verbose=1)  # Or more epochs as needed\n",
     "\n",
-    "print(f\"Time per epoch: {time_per_epoch} seconds\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6e783a5e-df0a-4e35-a874-b78d2ebb0a34",
-   "metadata": {},
-   "source": [
-    "# The actual run"
+    "# Final evaluation, potentially on a separate test set if you have one\n",
+    "validation_generator = TimeseriesGenerator(X_test_scaled, y_test_scaled, length=n_input, batch_size=best_params['batch_size'])\n",
+    "y_pred_scaled = model.predict(validation_generator)\n",
+    "y_test_original = y_test.values.flatten()[:len(y_pred)]  # Adjust length if necessary\n",
+    "y_pred = scaler_y.inverse_transform(y_pred_scaled)\n",
+    "\n",
+    "# Calculate RMSE and MAPE\n",
+    "rmse = math.sqrt(mean_squared_error(y_test_original, y_pred))\n",
+    "mape = np.mean(np.abs((y_test_original - y_pred) / y_test_original)) * 100\n",
+    "\n",
+    "print(f\"RMSE: {rmse}\")\n",
+    "print(f\"MAPE: {mape}%\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c7ec3ed-c466-43a0-99d7-5a9a43efde58",
+   "id": "31ca4b47-f852-4896-b3e9-3310fca9e299",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_model(hp):\n",
-    "    model = Sequential()\n",
-    "    model.add(LSTM(\n",
-    "        units=hp.Int('units', min_value=50, max_value=150, step=50),\n",
-    "        activation=hp.Choice('activation', ['relu', 'tanh']),\n",
-    "        input_shape=(n_input, n_features)\n",
-    "    ))\n",
-    "    model.add(Dense(1))\n",
-    "    model.compile(\n",
-    "        optimizer=Adam(hp.Float('learning_rate', min_value=0.0001, max_value=0.01, sampling='log')),\n",
-    "        loss='mse'\n",
-    "    )\n",
-    "    return model\n",
+    "import matplotlib.pyplot as plt\n",
+    "y_test_original = y_test.values.flatten()[:len(y_pred)]  # Adjust length if necessary\n",
+    "# Assuming y_test_original and y_pred are correctly aligned with these dates\n",
+    "test_dates_aligned = X_test['datetime'].values[-len(y_pred):]\n",
     "\n",
-    "tuner = RandomSearch(\n",
-    "    build_model,\n",
-    "    objective='val_loss',\n",
-    "    max_trials=10,\n",
-    "    executions_per_trial=2,\n",
-    "    directory='keras_tuner_dir',\n",
-    "    project_name='rnn_tuning'\n",
-    ")\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(test_dates_aligned, y_test_original, label='Actual', marker='.', linestyle='-', linewidth=1)\n",
+    "plt.plot(test_dates_aligned, y_pred, label='Predicted', alpha=0.7, marker='.', linestyle='--', linewidth=1)\n",
+    "plt.title('Actual vs Predicted')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Value')\n",
+    "plt.legend()\n",
     "\n",
-    "callbacks = [\n",
-    "    tf.keras.callbacks.EarlyStopping('val_loss', patience=3),\n",
-    "    tf.keras.callbacks.TensorBoard(log_dir='./logs')  # Add TensorBoard callback\n",
-    "]\n",
+    "# Improve readability of the date labels\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.tight_layout()\n",
     "\n",
-    "tuner.search(\n",
-    "    X_train_scaled, y_train_scaled,\n",
-    "    epochs=20,\n",
-    "    validation_data=(X_test_scaled, y_test_scaled),\n",
-    "    callbacks=callbacks\n",
-    ")\n",
-    "\n",
-    "\n",
-    "best_model = tuner.get_best_models(num_models=1)[0]\n",
-    "best_hyperparameters = tuner.get_best_hyperparameters()[0]\n",
-    "\n",
-    "# Evaluate the best model\n",
-    "loss = best_model.evaluate(X_test_scaled, y_test_scaled)\n",
-    "print('Loss:', loss)\n",
-    "\n",
-    "# Print best hyperparameters\n",
-    "print('Best hyperparameters:', best_hyperparameters.values)\n",
-    "\n"
+    "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b1d6233-2073-44b2-be20-2a01449df07b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
